--- a/androidApp/src/main/res/values-ko/strings.xml
+++ b/androidApp/src/main/res/values-ko/strings.xml
@@ -592,7 +592,10 @@
     
     <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">AI 분석</string>
-    <string name="beat_the_bot_signals_detected_fmt">%1$d개의 신호 감지됨</string>
+    <string name="beat_the_bot_signals_detected_fmt">%1$d signals detected</string>
+    <string name="beat_the_bot_reset_game">Reset Game</string>
+    <string name="cd_reset_game">Reset game and start over</string>
+    <string name="toast_game_reset">Game reset! Starting fresh…</string>
     
     <!-- Analysis Breakdown (ScanResultScreen) -->
     <string name="analysis_brand_title">브랜드 사칭</string>
