--- a/androidApp/src/main/res/values-vi/strings.xml
+++ b/androidApp/src/main/res/values-vi/strings.xml
@@ -581,7 +581,10 @@
     
     <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">PHÂN TÍCH AI</string>
-    <string name="beat_the_bot_signals_detected_fmt">%1$d tín hiệu được phát hiện</string>
+    <string name="beat_the_bot_signals_detected_fmt">%1$d signals detected</string>
+    <string name="beat_the_bot_reset_game">Reset Game</string>
+    <string name="cd_reset_game">Reset game and start over</string>
+    <string name="toast_game_reset">Game reset! Starting fresh…</string>
     
     <!-- Analysis Breakdown (ScanResultScreen) -->
     <string name="analysis_brand_title">Giả Mạo Thương Hiệu</string>
