feat(ios): add Android/WebApp parity sections and UX improvements
1. ScanResultView Parity (Android/WebApp):
   - Added ScanStatusBadge showing scan completion status
   - Added UrlDisplayRow with link icon
   - Added AnalysisMetaRow ('Analyzed offline • No data leaves device')
   - Added EngineStatsCard (analysis time, signals, engine version)
   - Added TopAnalysisFactorsSection with PASS/FAIL/WARN/CRITICAL cards

2. History Navigation Fix:
   - Changed from popup sheet to full NavigationLink navigation
   - Clicking history item now opens full ScanResultView
   - Added toRiskAssessment() conversion on HistoryItemMock

3. Beat the Bot Reset Button:
   - Added reset button (⟲) to toolbar
   - resetGame() resets all state and starts fresh

Files: 8 files changed
Version: 1.20.26

--- a/iosApp/QRShield/en.lproj/Localizable.strings
+++ b/iosApp/QRShield/en.lproj/Localizable.strings
@@ -642,3 +642,36 @@
 "meta.heuristics" = "Heuristics";
 "meta.engine" = "Engine";
 "meta.engine_version_fmt" = "v%@";
+
+// MARK: - Engine Stats Card (Android Parity)
+"stats.analysis_time" = "Analysis Time";
+"stats.signals" = "Signals";
+"stats.engine" = "Engine";
+
+// MARK: - Top Analysis Factors (Android/WebApp Parity)
+"factors.title" = "Top Analysis Factors";
+"factor.category.https" = "HTTPS";
+"factor.category.domain" = "Domain";
+"factor.category.database" = "Database";
+"factor.category.heuristics" = "Heuristics";
+
+"factor.ssl_valid" = "SSL Certificate Valid";
+"factor.ssl_valid_desc" = "Connection is encrypted with HTTPS. Data transmitted securely.";
+"factor.ssl_missing" = "No SSL Certificate";
+"factor.ssl_missing_desc" = "No encryption. Data could be intercepted by attackers.";
+
+"factor.ip_address" = "IP Address Used";
+"factor.ip_address_desc" = "URL uses raw IP instead of domain name - common attack technique.";
+"factor.domain_check" = "Domain Verified";
+"factor.domain_check_desc" = "Domain structure appears legitimate.";
+
+"factor.blacklist_found" = "Known Threat";
+"factor.blacklist_found_desc" = "This URL matches known malicious patterns in our database.";
+"factor.blacklist_clean" = "Not in Blocklist";
+"factor.blacklist_clean_desc" = "URL not found in any known threat databases.";
+
+"factor.heuristics_title" = "Heuristic Analysis";
+"factor.heuristics_desc" = "%d signals detected by pattern analysis.";
+
+// MARK: - Beat the Bot Reset
+"training.reset" = "Reset Game";
