refactor: Rebrand project from QR-SHIELD to Mehr Guard across all platforms and documentation.

--- a/androidApp/src/main/res/values-ar/strings.xml
+++ b/androidApp/src/main/res/values-ar/strings.xml
@@ -368,7 +368,7 @@
     <string name="beat_the_bot_vs_mode">وضع المواجهة</string>
     <string name="beat_the_bot_you">أنت</string>
     <string name="beat_the_bot_streak_fmt">التتابع: %1$d 🔥</string>
-    <string name="beat_the_bot_bot_name">روبوت QR-Shield</string>
+    <string name="beat_the_bot_bot_name">Mehr Guard Bot</string>
     <string name="beat_the_bot_latency_fmt">التأخير: %1$d مللي ثانية</string>
     <string name="beat_the_bot_pts_fmt">%1$d نقطة</string>
     <string name="beat_the_bot_preview_hidden">المعاينة مخفية</string>
