--- a/androidApp/src/main/res/values-th/strings.xml
+++ b/androidApp/src/main/res/values-th/strings.xml
@@ -344,7 +344,7 @@
     <string name="beat_the_bot_vs_mode">โหมด VS</string>
     <string name="beat_the_bot_you">คุณ</string>
     <string name="beat_the_bot_streak_fmt">สตรีค: %1$d 🔥</string>
-    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
+    <string name="beat_the_bot_bot_name">Mehr Guard Bot</string>
     <string name="beat_the_bot_latency_fmt">เวลาแฝง: %1$dms</string>
     <string name="beat_the_bot_pts_fmt">%1$d คะแนน</string>
     <string name="beat_the_bot_preview_hidden">ซ่อนตัวอย่าง</string>
