--- a/androidApp/src/main/res/values-tr/strings.xml
+++ b/androidApp/src/main/res/values-tr/strings.xml
@@ -344,7 +344,7 @@
     <string name="beat_the_bot_vs_mode">VS MODU</string>
     <string name="beat_the_bot_you">Sen</string>
     <string name="beat_the_bot_streak_fmt">Seri: %1$d 🔥</string>
-    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
+    <string name="beat_the_bot_bot_name">Mehr Guard Bot</string>
     <string name="beat_the_bot_latency_fmt">Gecikme: %1$dms</string>
     <string name="beat_the_bot_pts_fmt">%1$d puan</string>
     <string name="beat_the_bot_preview_hidden">Önizleme gizli</string>
