--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -482,7 +482,7 @@
     <string name="beat_the_bot_vs_mode">VS MODE</string>
     <string name="beat_the_bot_you">You</string>
     <string name="beat_the_bot_streak_fmt">Streak: %1$d 🔥</string>
-    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
+    <string name="beat_the_bot_bot_name">Mehr Guard Bot</string>
     <string name="beat_the_bot_latency_fmt">Latency: %1$dms</string>
     <string name="beat_the_bot_pts_fmt">%1$d pts</string>
     <string name="beat_the_bot_preview_hidden">Preview Hidden</string>
